--- a/app-django/frontend/package.json
+++ b/app-django/frontend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "*",
     "@material-ui/core": "*",
+    "@material-ui/lab": "*",
     "@material-ui/icons": "*",
     "react-router-dom": "*"
   }
