--- a/music_app/frontend/Dockerfile
+++ b/music_app/frontend/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:slim AS base
 SHELL ["/bin/bash", "-c"]
 WORKDIR /project
-COPY package.json scripts ./
+COPY package.json .
 ARG build_env
-RUN ./npm_install.sh
+RUN npm install --no-package-lock
 
 FROM base AS development
 COPY . .
-CMD sed -i 's/production/development/g' webpack.config.js && npm run dev
+CMD npm run dev
