Ignore frond-end builder resources

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,14 @@
 ### ~ private ~ ###
 *.env
+db.sqlite3
 
 ### ~ testing ~ ###
 htmlcov
 
 ### ~ front-end ~ ###
 **/*.scss
+**/*.json
+**/webpack.config.js
 
 ### ~ Docker ~ ###
 **/.dockerignore
