--- a/music_app/frontend/package.json
+++ b/music_app/frontend/package.json
@@ -1,14 +1,9 @@
 {
-  "name": "project",
-  "version": "1.0.0",
-  "description": "",
+  "homepage": ".",
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/core": "*",
     "@babel/preset-env": "*",
