--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 # 
 SECRET_KEY=needs_changing
 #
-SPOTIFY_REDIRECT_URI=some_spotify_redirect_uri
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:8000/music_app/spotify/redirect
 SPOTIFY_CLIENT_ID=some_spotify_client_id
 SPOTIFY_CLIENT_SECRET=some_spotify_client_secret
 #
