--- a/music_app/frontend/.dockerignore
+++ b/music_app/frontend/.dockerignore
@@ -1,7 +1,8 @@
 ### ~ Python ~ ###
-**/*.py
 migrations
+templates
+*.py
 
 ### ~ Docker ~ ###
-**/.dockerignore
-**/Dockerfile
+.dockerignore
+Dockerfile
