Add testing packages

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,9 @@ whitenoise = "*"
 gunicorn = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-cov = "*"
+flake8 = "*"
 
 [scripts]
 devserver = "python /project/music_app/manage.py runserver 0.0.0.0:8000"
