--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+aiohttp = {version = "*", extras = ["speedups"]}
+aiohttp_jinja2 = "*"
+sqlalchemy = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
+aiohttp-devtools = "*"
+mypy = "*"
+flake8 = "*"
 
 [scripts]
+devserver = "adev runserver app/backend/factory.py --app-factory create_app"
