--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,11 @@
 ### ~ Python ~ ###
 .venv
 
+### ~ frontend ~ ###
+**/node_modules
+**/main.js*
+**/dist
+
 ### ~ Docker ~ ###
 *.yml
 **/.dockerignore
