--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "react": "*",
-        "react-dom": "*"
+        "react-dom": "*",
+        "@material-ui/core": "*"
     }
 }
