--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -12,11 +12,13 @@
         "webpack": "*",
         "webpack-cli": "*",
         "typescript": "*",
-        "@types/react-dom": "*"
+        "@types/react-dom": "*",
+        "@types/react-router-dom": "*"
     },
     "dependencies": {
         "react": "*",
         "react-dom": "*",
+        "react-router-dom": "*",
         "@material-ui/core": "*"
     }
 }
