--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -14,7 +14,8 @@
         "typescript": "*",
         "@types/react-dom": "*",
         "@types/react-router-dom": "*",
-        "@types/react-redux": "*"
+        "@types/react-redux": "*",
+        "redux-devtools-extension": "*"
     },
     "dependencies": {
         "redux": "*",
