--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,18 +2,20 @@ FROM node:slim AS base
 SHELL ["/bin/bash", "-c"]
 WORKDIR /project
 COPY src src
-COPY .eslintrc.json \
-    babel.config.json \
-    package*.json \
+COPY babel.config.json \
+    package.json \
     tsconfig.json \
     webpack.config.cjs \
     ./
-RUN npm install --no-package-lock
 
 FROM base AS development
+COPY .eslintrc.json .
+RUN npm install --package-lock=false
 CMD rm -rf dist/* && sleep infinity
 
 FROM base AS builder
+COPY package-lock.json .
+RUN npm install --production
 RUN npx tsc
 RUN npm run prod
 
