--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "lint": "tsc --noEmit && prettier --write --log-level=warn src && eslint \"src/**/*.ts*\""
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.5",
+        "@mui/material": "^5.14.2",
         "next": "^13.4.12",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
